# DjangoRest

./: guide  pyproject.toml  requirements.txt
account/: views.py
author/: admin.py  models.py  serializer.py  urls.py  views.py
book/: admin.py  models.py  serializer.py  urls.py  views.py
core/: models.py
mysite/: settings.py  urls.py
